--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> 
+    <link rel="icon" href="./assets/logo.jpg" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />    
-    <meta  name="description"  content="my portfolio website" />
+    <meta  name="description"  content="A highly skilled and motivated full stack web developer/computer scientist " />
     <meta name="author"content=" Ahmed Sani Adamu"> 
   <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.css" />  
     <!-- Boostrap 5 CDN -->
@@ -13,7 +13,7 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>     
     
     <title>Ahmed Sani's portfolio</title> 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="./assets/logo.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
